<resources>
    <string name="app_name">Protify</string>
    <string name="logo">Spotify logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in for Spotify</string>
    <string name="sign_up">Sign up for Spotify</string>
    <string name="login">Log In</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="text">Don\'t have an account? </string>
    <string name="label_sign_up">Sign up for Spotify </string>
    <string name="register">Register </string>
    <string name="email">Email </string>
    <string name="confirm_password">Confirm Password </string>
    <string name="already_have_account">Already have an account? </string>
    <string name="required">Required</string>
    <string name="password_error">At least 6 character! </string>
    <string name="phone_error">At least 10 character! </string>
    <string name="confirm_password_error">Confirm password does not match! </string>
    <string name="fill_all_the_form">Please fill all the form</string>
    <string name="in_valid_email">InvalidEmail</string>
    <string name="in_valid_phone">InvalidPhoneNumber</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="dob">01/01/2003</string>
    <string name="phone_number">Phone number</string>
    <string name="gender">Gender:</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="different">Different</string>

</resources>